Merged revisions 23293 via svnmerge from https://svn.codehaus.org/mule/branches/mule-3.2.x
git-svn-id: https://svn.codehaus.org/mule/branches/mule-3.x@23295 bf997673-6b11-0410-b953-e057580c5b09